# py-lambda-template

infra/: tsconfig.json
python/service_name/: .gitignore  Dockerfile  pyproject.toml
python/service_name/src/: index.py
python/service_name/src/math/: add.py
python/service_name/tests/: test_add.py
